--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "author": "Bowden Kelly",
   "license": "MIT",
   "scripts": {
-    "start": "npm run build-ts && node dist/server.js",
+    "start": "npm run serve",
     "build": "npm run build-ts && npm run tslint",
+    "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
     "watch":
       "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\"",
